fix: adjust update lead route in swagger
